--- a/Timer_Stopwatch.html
+++ b/Timer_Stopwatch.html
@@ -48,7 +48,7 @@
           <p id="location" class="text-light"></p>
         </div>
         <div class="stopwatch-container">
-          <h3  class="text-light">Stopwatch</h3>7083616241
+          <h3  class="text-light">Stopwatch</h3>
           <img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/Simpleicons_Business_stopwatch.svg" width="100vw" height="100vh" alt="">
           <div class="mb-4">
             <button id="start-stopwatch" class="btn btn-primary">Start</button>
